@startuml
skinparam linetype ortho
skinparam shadowing true
skinparam handwritten false

skinparam class {
    BorderColor black
}

class User {
    + Id: string
    + Username: string
    + Password: string
    + Recipes: Recipe[]
    + CookingBooks: CookingBook[]
    
    + AddRecipe(recipe: Recipe)
    + User(userDto: UserDto)
    + Save(IUserDal userDal, IRecipeDal recipeDal, IFoodImageDal foodImageDal)
    + User(username: string)
}

class UserContainer {
    + AddUser(user: User)
    + RemoveUser(user: User)
    + FindByUsername(username: string)
    + FindById(userId: string)
    + GetAll(): User[]
}

class Recipe {
    + Id: string
    + UserId: string
    + Title: string
    + FoodImage: FoodImage
    + Preparations: string
    + Ingredients: string
    
    + Save(IRecipeDal recipeDal, IFoodImageDal foodImageDal)
    + Recipe(recipeDto: RecipeDto, imageDto: ImageDto)
}

class RecipeContainer {
    + EditRecipe(Recipe recipe)
    + FindAllByCookingBookId(string cookingBookId)
    + FindAllByUserId(string userId)
    + FindById(string recipeId)
    + AddRecipe(recipe: Recipe)
    + RemoveRecipe(recipe: Recipe)
}

class FoodImage {
    + Id: string
    + Image: byte[]
    + RecipeId: string
    
    + Save(IFoodImageDal foodImageDal)
    + FindByRecipeId(string recipeId, IFoodImageDal foodImageDal): FoodImage
    + Base64Image(): string
    + Image(imageDto: ImageDto)
}

class CookingBook {
    + Id: string
    + OwnerId: string
    + Name: string
    + Description: string
    + Recipes: Recipe[]
    
    + AddRecipe(recipe: Recipe)
    + Save()
}

class CookingBookContainer {
    + GetAllByUserId(string userId): CookingBook[]
    + FindById(string cookingBookId): CookingBook
}

UserContainer --> "*" User : Users
RecipeContainer --> "*" Recipe : Recipes
User "1" --> "*" Recipe
CookingBookContainer --> "*" CookingBook: CookingBooks
User "*" --> "*" CookingBook
Recipe "1" --> "1" FoodImage
@enduml